# parallel-markets-client

./: Cargo.toml  rustfmt.toml
src/: error.rs  lib.rs  types.rs
tests/: integration_test.rs
